changing colors and adress

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                 <span class="parent-name">Gislene de Oliveira Cavalcante</span>
             </div>
             <div class="parents-names right">
-                <span class="parent-name">Elias Muduro Ribeiro</span>
-                <span class="parent-name">Ana Rita O.B.Ribeiro</span>
+                <span class="parent-name">Elias Maduro Ribeiro</span>
+                <span class="parent-name">Ana Rita O.B. Ribeiro</span>
             </div>
             <p class="couple-names">Davi & Ana Beatriz</p>
             <span class="info">Convidam para seu casamento a realizar-se em</span>
@@ -59,7 +59,7 @@
                             class="far fa-eye"></i></a>
                     <transition name="slide-fade">
                         <div v-if="showCompleteAddress" class="block-link-info">
-                            Rodovia dos Tamoios, Km 7,5, São José dos Campos - SP, 12227-000
+                            Rodovia dos Tamoios, Km 7,5, Av. A, São José dos Campos - SP, 12227-000
                         </div>
                     </transition>
                     <!-- <a class="act-link block-link" href="javascript:void(0)" :class="{'active': showMap}"
@@ -75,7 +75,7 @@
                         href="https://www.google.com/maps/place/Sal%C3%A3o+Dubai+-+Av.+Maria+C%C3%A2nhttps://www.google.com/maps/place/Clube+de+Campo+ADC+Embraer/@-23.2698591,-45.8403808,17.26z/data=!4m12!1m6!3m5!1s0x94cc4adda5689475:0x57acde99fb101e77!2sClube+de+Campo+ADC+Embraer!8m2!3d-23.2700797!4d-45.8385399!3m4!1s0x94cc4adda5689475:0x57acde99fb101e77!8m2!3d-23.2700797!4d-45.8385399">
                         Abrir no Google Maps <i class="fab fa-google"></i></a>
                     <a class="act-link block-link" target="_blank"
-                        href="https://www.waze.com/live-map/directions/brasil/sao-paulo/av.-maria-candida-delgado,-390?navigate=yes&utm_campaign=default&utm_source=waze_website&utm_medium=lm_share_directions&to=place.ChIJYS5uwtZJzJQR0uyimpAIU-8">
+                        href="https://www.waze.com/pt-BR/live-map/directions/brasil/sao-paulo/clube-de-campo-adc-embraer?navigate=yes&utm_campaign=default&utm_source=waze_website&utm_medium=lm_share_directions&to=place.ChIJdZRopd1KzJQRdx4Q-5nerFc">
                         Abrir no Waze <i class="fab fa-waze"></i></a>
                     <a class="act-link block-link" href="javascript:void(0)" :class="{'active': showMap}"
                         @click="showInfos = !showInfos">Covid-19 <i class="fas fa-virus"></i></a>
