--- a/index.html
+++ b/index.html
@@ -33,8 +33,12 @@
                 <strong class="parent-name">Ana Rita O.B. Ribeiro</strong>
             </div>
             <p class="couple-names">Davi & Beatriz</p>
-            <div class="picture-section">
+            <div class="picture-section-1">
                 <figure class="picture"></figure>
+                <figure class="picture"></figure>
+                <figure class="picture"></figure>
+            </div>
+            <div class="picture-section-2"> 
                 <figure class="picture"></figure>
                 <figure class="picture"></figure>
             </div>
