--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="container">
           
             <span class="quote">"E tudo o que fizerdes, seja em palavra, seja em ação, fazei-o em nome do Senhor
-                Jesus, dando por ele graças a Deus Pai." Colossenses 3:17.</span>
+                Jesus, dando por ele graças a Deus Pai." <br/> Colossenses 3:17.</span>
             <div class="parents-names left">
                 <strong class="parent-name">Elias Cavalcante Junior</strong>
                 <strong class="parent-name">Gislene de Oliveira Cavalcante</strong>
@@ -235,7 +235,7 @@
         <div class="music" title="Mutar/Desmutar volume" @click="toggleSound()">
             <i class="fas" :class="{'fa-volume-up': !musicMuted, 'fa-volume-mute': musicMuted}"></i>
             <audio id="music" autoplay loop>
-                <source src="./music.mp3" />
+                <source src="./worship (mp3cut.net).mp3" />
             </audio>
         </div>
 
