--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                     aquilo
                     que estiver a sua disposição e no seu coração.</span>
                 <a class="act-link block-link"
-                    href="https://www.querodecasamento.com.br/lista-de-casamento/tamires-gustavocouto" target="_blank">
+                    href="" target="_blank">
                     Abrir lista de presentes <i class="fas fa-external-link-alt"></i></a>
                 <a class="act-link block-link" href="javascript:void(0)" @click="copyPix()">
                     Copiar chave Pix <i class="fas fa-key"></i></a>
