changing responsive background

--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
 
 <body>
     <div class="app" :class="{'loading': loading, 'show': initialized}">
-
-
+        <div class="middle"></div>
         <div class="container">
           
             <span class="quote">"E tudo o que fizerdes, seja em palavra, seja em ação, fazei-o em nome do Senhor
