fixing css issues

--- a/index.html
+++ b/index.html
@@ -32,25 +32,28 @@
                 <strong class="parent-name">Ana Rita O.B. Ribeiro</strong>
             </div>
             <p class="couple-names">Davi & Beatriz</p>
-            <div class="picture-section-1">
-                <figure class="picture">
-                    <img class="img"src="./assets/prewedding1.jpg" alt="" srcset="">
-                </figure>
-                <figure class="picture">
-                    <img class="img" src="./assets/pre wedding (60).jpg" alt="" srcset="" >
-                </figure>
-                <figure class="picture">
-                    <img class="img" src="./assets/pre wedding2.jpg" alt="" srcset="">
-                </figure>
+            <div class="imgsection">
+                <div class="picture-section-1">
+                    <figure class="picture">
+                        <img class="img"src="./assets/prewedding1.jpg" alt="" srcset="">
+                    </figure>
+                    <figure class="picture">
+                        <img class="img" src="./assets/pre wedding (60).jpg" alt="" srcset="" >
+                    </figure>
+                    <figure class="picture">
+                        <img class="img" src="./assets/pre wedding2.jpg" alt="" srcset="">
+                    </figure>
+                </div>
+                <div class="picture-section-2"> 
+                    <figure class="picture">
+                        <img class="img"src="./assets/pre wedding (82).jpg" alt="" srcset="">
+                    </figure>
+                    <figure class="picture">
+                        <img class="img"src="./assets/pre wedding (85).jpg" alt="" srcset="">
+                    </figure>
+                </div>
             </div>
-            <div class="picture-section-2"> 
-                <figure class="picture">
-                    <img class="img"src="./assets/pre wedding (82).jpg" alt="" srcset="">
-                </figure>
-                <figure class="picture">
-                    <img class="img"src="./assets/pre wedding (85).jpg" alt="" srcset="">
-                </figure>
-            </div>
+         
             <span class="info">Convidam para seu casamento a realizar-se em</span>
             <span class="info date"><span class="emphasis">15</span> de <span class="emphasis">Janeiro</span> de <span
                     class="emphasis">2022</span> - <span class="emphasis">16h</span>
