last invite version

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 <a class="act-link block-link" href="javascript:void(0)" @click="copyPix()">
                     Copiar chave Pix <i class="fas fa-key"></i></a>
             </div>
-
+<!-- 
             <div class="section-divider"></div>
             <div class="section">
                 <i class="section-icon far fa-comment-dots"></i>
@@ -176,7 +176,7 @@
                     </div>
                 </span>
             </div>
-        </div>
+        </div> -->
 
         <div class="presentation" :class="{'show': !invitationOpened}">
             <div class="presentation-text">
